--- a/index.html
+++ b/index.html
@@ -6,12 +6,21 @@
     <title>whitetiger</title>
 </head>
 <body>
-    <h1><span>w<span>h</span><span>i</span><span>t</span></h1>
+    <div id="navbar"></div>
+  <div id="title"> <h1><span>White</span> <span>Tiger</span></h1>
+  </div>
+    
+<br>
+<image src="images/whitetigercover.webp" alt="White Tiger">
+<br>       
+<button onclick="habitat()">Learn about their habitat!</button>
+
+    <script>
+            function habitat() {
+                window.location.href = "habitat.html";
+            }
+    </script>
+
 </body>
-
-
-
-
-
 
 </html>
