--- a/habitat.html
+++ b/habitat.html
@@ -1,14 +1,23 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" 
-    href="style.css"> 
+    <link rel="stylesheet" href="style.css">
+    <title>White Tiger Habitat</title>
 </head>
 <body>
-    <h1 id="title">Habitats</h1>
-       <br>   
-    <image src="images/whitetigerhabitat.jpg"/>
-        <br>
-    <h4 id="info">White tigers are no longer found in the wild and exist primarily in captivity, and the last known wild white tiger was shot in 1958. historically, their habitat was dense forests, grasslands, and mangroves in India, where they had access to rivers and lakes that supported their prey. These habitats provided cover for hunting and raising cubs, as well as large territories necessary for their survival. Today, deforestation and human encroachment have contributed to their disappearance from natural environments, making their conservation in captivity the main way to preserve this striking tiger variant.</h4>
 
+<div id="navbar">
+    <a href="index.html">Home</a>
+    <a href="habitat.html">Habitats</a>
+</div>
+
+<h1 id="title">Habitats</h1>
+
+<img src="images/whitetigerhabitat.jpg" alt="White Tiger Habitat">
+
+<h4 id="info">
+White tigers are no longer found in the wild and exist primarily in captivity, and the last known wild white tiger was shot in 1958. historically, their habitat was dense forests, grasslands, and mangroves in India, where they had access to rivers and lakes that supported their prey. These habitats provided cover for hunting and raising cubs, as well as large territories necessary for their survival. Today, deforestation and human encroachment have contributed to their disappearance from natural environments, making their conservation in captivity the main way to preserve this striking tiger variant.
+</h4>
+
+</body>
 </html>
