--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <title>whitetiger</title>
 </head>
 <body>
-    <div id="navbar"></div>
-  <div id="title"> <h1><span>White</span> <span>Tiger</span></h1>
-  </div>
+    <div id="navbar">
+        <a href="index.html">Home</a>
+        <a href="habitat.html">Habitats</a>
+    </div>    
     
 <br>
-<image src="images/whitetigercover.webp" alt="White Tiger">
+<img src="images/whitetigercover.webp" alt="White Tiger">
 <br>       
 <button onclick="habitat()">Learn about their habitat!</button>
 
@@ -21,6 +22,9 @@
             }
     </script>
 
+
 </body>
 
 </html>
+
+
